Update copyright to match template.

--- a/srfi-185.html
+++ b/srfi-185.html
@@ -229,7 +229,7 @@ that requires more bytes.
 
 </p><h1>Copyright</h1>
 <p>
-Copyright (C) Per Bothner 2015, John Cowan 2019</p>
+Copyright &copy; Per Bothner 2015, John Cowan 2019</p>
 <p>
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
@@ -239,8 +239,9 @@ distribute, sublicense, and/or sell copies of the Software, and to
 permit persons to whom the Software is furnished to do so, subject to
 the following conditions:</p>
 <p>
-The above copyright notice and this permission notice shall be
-included in all copies or substantial portions of the Software.</p>
+The above copyright notice and this permission notice (including the
+next paragraph) shall be included in all copies or substantial
+portions of the Software.</p>
 <p>
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
