Fix <head>.  Remove blank line before <head>.

--- a/srfi-185.html
+++ b/srfi-185.html
@@ -1,19 +1,18 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<html lang="en">
   <head>
     <title>SRFI 185: Linear adjustable-size strings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/srfi.css" type="text/css" />
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<style type="text/css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <style type="text/css">
   div.title h1 { font-size: small; color: blue }
   div.title { font-size: xx-large; color: blue; font-weight: bold }
   h1 { font-size: x-large; color: blue }
   h2 { font-size: large; color: blue }
   /* So var inside pre gets same font as var in paragraphs. */
   var { font-family: monospace; }
-</style>
+    </style>
   </head>
 
 <body>
