Fix error reported by HTML Tidy.

--- a/srfi-185.html
+++ b/srfi-185.html
@@ -246,7 +246,7 @@ OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 <hr>
 <address>Author: <a href="mailto:cowan@ccil.org">John Cowan</a></address>
-    <address>Editor: <a href="mailto:srfi-editors at srfi dot schemers dot org">Arthur A. Gleckler</a></address>
+    <address>Editor: <a href="mailto:srfi-editors+at+srfi+dot+schemers+dot+org">Arthur A. Gleckler</a></address>
 
 
 </body></html>
