At Per's request, remove him as SRFI 185 coauthor.

--- a/srfi-185.html
+++ b/srfi-185.html
@@ -22,11 +22,12 @@ Linear adjustable-size strings
 </div>
 
 <H1>Author</H1>
-<p>Per Bothner (original author)
-<code><a href="mailto:per@bothner.com">&lt;per@bothner.com&gt;</a></code>,
-John Cowan (editor and shepherd)
-<code><a href="mailto:cowan@ccil.org">&lt;cowan@ccil.org&gt;</a></code>,
-</p>
+<p>John Cowan <code><a href="mailto:cowan@ccil.org">&lt;cowan@ccil.org&gt;</a></code></p>
+
+<p>Please note that much of the text and many of the examples are
+  derived from <a href="https://srfi.schemers.org/srfi-118/srfi-118.html">SRFI 118</a>
+  by Per Bothner.</p>
+
 
 <h1>Status</h1>
 
