--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <h1>SRFI 185: Linear adjustable-size strings</h1>
-    <p class="authors">by John Cowan (editor and shepherd), Per Bothner (original author)</p>
+    <p class="authors">by John Cowan</p>
     <p class="status">status: <em>draft</em> (2020/2/24)</p><span class="see-also">See also <a href="/srfi-13/">SRFI 13: String Libraries</a>, <a href="/srfi-118/">SRFI 118: Simple adjustable-size strings</a>, <a href="/srfi-130/">SRFI 130: Cursor-based string library</a>, <a href="/srfi-140/">SRFI 140: Immutable Strings</a>, and <a href="/srfi-152/">SRFI 152: String Library (reduced)</a>.</span>
 
     <ul class="info">
