--- a/srfi-185.html
+++ b/srfi-185.html
@@ -47,6 +47,8 @@ adds two procedures <code>string-append!</code> and
 This SRFI provides two linear-update versions of these procedures:
 that is, the implementation may change the string size or return a
 new string instead.
+In addition, two convenience macros are provided that make the
+procedures somewhat easier to use.
  
 </p><h1>Rationale</h1>
 <p>
@@ -55,7 +57,7 @@ Schemes that support SRFI 118 or
 <a href="https://srfi.schemers.org/srfi-140/srfi-140.html">SRFI 140</a>
 provide fixed-size immutable strings and variable-size
 mutable strings, as the usefulness of standard Scheme's fixed-size mutable strings is
-extremely minimal: The main use is for a buffer to which one incrementally
+limited: the main use is for a buffer to which one incrementally
 adds more data.  So why not fold that functionality into the string API?
 That is, why can't you add just data to the end of a string?
 </p><p>
@@ -68,70 +70,32 @@ copy the underlying characters, and therefore is <i>not</i> necessarily
 more efficient.
 
 </p><h1>Specification</h1>
+<h2>Procedures</h2>
 <p>
-We add two new functions.  The most frequently used is likely to be
-<code>string-linear-append!</code>, while <code>string-linear-replace!</code>
+This SRFI also provides two new convenience macros.
+<code>string-append-linear!</code>, while <code>string-replace-linear!</code>
 handles the general case of replacement of a substring
 with another string of possibly different size.</p>
 
-</p><pre>(<b>string-linear-append!</b> <var>string</var> <var>value</var> ...)
+</p><pre>(<b>string-append-linear!</b> <var>string1</var> <var>string2</var> ...)
 </pre>
 <blockquote>
 <p>
-This procedure returns a string which extends <var>string</var> by
-appending each <var>value</var> (in order) to the end of <var>string</var>.
-The result can either be <var>string</var> itself or a newly allocated string.
-In either case, any references to <var>string</var>
+This procedure returns a string which extends <var>string1</var> by
+appending each additional <var>string</var> (in order) to the end of <var>string</var>.
+The result can either be <var>string1</var> itself or a newly allocated string.
+In either case, any references to <var>string1</var>
 other than the result of this procedure
 must be treated as "dead" and never referred to again.
-This must be so, since you can't rely on the value passed to a
+This must be so, since you can't rely on the modifiable string passed to a
 linear-update procedure after that procedure has been called. It might
 be unchanged; it might be altered.
 </p><p>
-A <var>value</var> can be a character or a string.
-</p><p>
-The following example shows how to process a string using
-<code>string-for-each</code> and incrementally <q>building</q> a result string
-using <code>string-linear-append!</code>:</p>
-<pre>(define (translate-space-to-newline str)
-  (let ((result (make-string 0)))
-    (string-for-each
-     (lambda (ch)
-       (cond ((char=? ch #\Space)
-              (string-linear-append! result #\Newline))
-             ((char=? ch #\Return)) ; Ignore
-             (else
-              (string-linear-append! result ch))))
-     str)
-    result))
-</pre>
 <p>There is no requirement that this procedure execute in constant time,
 even amortised (i.e. average) constant time.
-<p><em>Usage note:</em> Compare with using string ports:</p>
-<pre>(define (translate-space-to-newline str)
-  (let ((out (open-output-string)))
-    (string-for-each
-     (lambda (ch)
-       (cond ((char=? ch #\Space)
-              (write-char #\Newline out))
-             ((char=? ch #\Return)) ; Ignore
-             (else
-              (write-char ch out))))
-     str)
-    (get-output-string out)))
-</pre>
-<p>Using a string port in this situation is probably preferable:
-It is more portable, and you can expect decent performance in most
-implementations.  Using <code>string-linear-append!</code> may be slightly
-more efficient on some implementations, due to lower overhead,
-but that depends on the strategy used by <code>string-linear-append!</code>
-when the allocated buffer is too small.
-The <code>string-linear-append!</code> function is most useful when
-using (reading) a string is interleaved with growing it,
-or when also using <code>string-linear-replace!</code>.
+</p>
 </blockquote>
-
-<pre>(<b>string-linear-replace!</b> <var>dst</var> <var>dst-start</var> <var>dst-end</var> <var>src</var> [<var>src-start</var> [<var>src-end</var>]])
+<pre>(<b>string-replace-linear!</b> <var>dst</var> <var>dst-start</var> <var>dst-end</var> <var>src</var> [<var>src-start</var> [<var>src-end</var>]])
 </pre>
 <blockquote>
 Returns a string which has the same characters as <var>dst</var>,
@@ -160,8 +124,8 @@ then into the destination. (This can be achieved without allocating
 storage by making sure to copy in the correct direction in such circumstances.)
 <p>
 When <var>value</var> is a string then
-<code>(string-linear-append! <var>dst</var> <var>value</var>)</code> is equivalent to
-<code>(string-linear-replace! <var>dst</var> (string-length <var>dst</var>) (string-length <var>dst</var>) <var>value</var>)</code>.
+<code>(string-append-linear! <var>dst</var> <var>src</var>)</code> is equivalent to
+<code>(string-replace-linear! <var>dst</var> (string-length <var>dst</var>) (string-length <var>dst</var>) <var>src</var>)</code>.
 <p>
 <em>Note:</em>
 <a href="https://srfi.schemers.org/srfi-13/srfi-13.html">SRFI 13</a>
@@ -177,6 +141,77 @@ We adopt a different argument order here to be consistent with
 <code>string-copy!</code>, and existing <code>string-replace!</code>
 implementations.
 </blockquote>
+<h2>Macros</h2>
+<p>
+The two macros are equivalent to the procedures, except that the
+first argument must be a <i>place</i>.  A place is either a variable
+or a procedure application that is defined by
+<code>identifier-syntax</code> or SRFI 17
+so that it can appear as the first argument of <code>set!</code>.
+
+</p><pre>(<b>string-append!</b> <var>place</var> <var>string</var> ...)
+</pre>
+<blockquote>
+<p>
+This macro sets <i>place</i> to the result of invoking
+<code>(string-append-linear <i>place</i> <i>string</i> ...)</code>.
+It returns an unspecified value.
+</p><p>
+</blockquote>
+<pre>(<b>string-replace!</b> <var>dst-place</var> <var>dst-start</var> <var>dst-end</var> <var>src</var> [<var>src-start</var> [<var>src-end</var>]])
+</pre>
+<blockquote>
+This macro sets <var>dst-place</var> to
+a string which has the same characters as <var>dst-place</var>,
+except that the characters between
+<var>dst-start</var> and <var>dst-end</var> have been replaced
+with the characters of the string
+<var>src</var> between <var>src-start</var> and <var>src-end</var>.
+The result is an unspecified value.
+</p>
+</blockquote>
+<h2>Example</h2>
+<p>
+The following example shows how to process a string using
+<code>string-for-each</code> and incrementally <q>building</q> a result string
+using <code>string-append-linear!</code>:</p>
+<pre>(define (translate-space-to-newline str)
+  (let ((result (make-string 0)))
+    (string-for-each
+     (lambda (ch)
+       (cond ((char=? ch #\space)
+              (string-append! result #\newline))
+             ((char=? ch #\return)) ; Ignore
+             (else
+              (string-append! result (string ch)))))
+     str)
+    result))
+</pre>
+<p><em>Usage note:</em> Compare with using string ports:</p>
+<pre>(define (translate-space-to-newline str)
+  (let ((out (open-output-string)))
+    (string-for-each
+     (lambda (ch)
+       (cond ((char=? ch #\space)
+              (write-char #\newline out))
+             ((char=? ch #\return)) ; Ignore
+             (else
+              (write-char ch out))))
+     str)
+    (get-output-string out)))
+</pre>
+<p>Using a string port in this situation is probably preferable:
+It is more portable, and you can expect decent performance in most
+implementations.  Using <code>string-append!</code> may be slightly
+more efficient on some implementations, due to lower overhead,
+but that depends on the strategy used by <code>string-append!</code>
+when the allocated buffer is too small.
+The <code>string-append-linear!</code> and <code>string-append!</code> macro
+are most useful when
+using (reading) a string is interleaved with growing it,
+or when also using <code>string-replace-linear!</code>
+or <code>string-replace!</code>.
+</blockquote>
 
 <h1>Implementation</h1>
 <p>Here is a portable implementation that always returns a new string.
@@ -190,9 +225,9 @@ Alternatively, implementers can copy the definition of <code>string-replace</cod
 out of any of the sample implementations of those SRFIs.
 </p>
 <pre>
-(define string-linear-append! string-append)
+(define string-append-linear! string-append)
   
-(define string-linear-replace!
+(define string-replace-linear!
   (case-lambda
     ((dst dst-start dst-end src)
      (string-replace dst src dst-start dst-end 0 (string-length src)))
@@ -202,17 +237,31 @@ out of any of the sample implementations of those SRFIs.
      (string-replace dst src dst-start dst-end src-start src-end))))
 </pre>
 
+
 <p>If <a href="https://srfi.schemers.org/srfi-118/srfi-118.html">SRFI 118</a>
 or <a href="https://srfi.schemers.org/srfi-140/srfi-140.html">SRFI 140</a> is available,
 the implementation is even more trivial:
 </p>
 
 <pre>
-(define string-linear-append! string-append!)
+(define string-append-linear! srfi-118:string-append!)
 
-(define string-linear-replace! string-replace!)
+(define string-replace-linear! srfi-118:string-replace!)
 </pre>
 
+<p>Finally, here are the macros:
+
+<pre>
+(define-syntax string-append!
+  (syntax-rules ()
+    ((place . args)
+     (set! place (string-append-linear! place . args)))))
+
+(define-syntax string-replace!
+  (syntax-rules ()
+    ((place . args)
+     (set! place (string-replace-linear! place . args)))))
+</pre>
 <p>
 A native implementation is easy, assuming there is some indirection
 between the string object header and the actual stored characters.
@@ -220,7 +269,7 @@ between the string object header and the actual stored characters.
 Whenever the character buffer is full, it needs to be replaced with
 a bigger buffer.  If the size of the new buffer is a
 fixed multiple of the size of the old buffer then
- <code>string-linear-append!</code> has amortized constant execution time.
+ <code>string-append-linear!</code> has amortized constant execution time.
 (The multiple 1.5 <a href="https://stackoverflow.com/questions/1100311/what-is-the-ideal-growth-rate-for-a-dynamically-allocated-array">seems a good choice</a>.)
 </p><p>
 If you have cheap Smalltalk-style <code>becomes:</code> (which is admittedly
