Publish second draft.

--- a/srfi-185.html
+++ b/srfi-185.html
@@ -36,6 +36,7 @@ Linear adjustable-size strings
   <li>Received: 2020-02-23</li>
   <li>60-day deadline: 2020-04-24</li>
   <li>Draft #1 published: 2020-02-24</li>
+  <li>Draft #2 published: 2020-03-09</li>
 </ul>
 
 <h1>Abstract</h1>
