Publish third draft.

--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
                    type="hidden"
                    value="srfi-185@srfi.schemers.org"></form></a></li></ul>
     <h2>Abstract</h2><p>
-Scheme specifies mutable fixed-size strings.
+Scheme specifies mutable fixed-length strings.
 <a href="https://srfi.schemers.org/srfi-118/srfi-118.html">SRFI 118</a>
 adds two procedures <code>string-append!</code> and
-<code>string-replace!</code> which allow the size of the string to change.
+<code>string-replace!</code> which allow the length of the string to change.
 This SRFI provides two linear-update versions of these procedures:
-that is, the implementation may change the string size or return a
+that is, the implementation may change the string length or return a
 new string instead.
-</body></html>
+In addition, two convenience macros are provided that make the
+procedures somewhat easier to use.</body></html>
