--- a/srfi-185.html
+++ b/srfi-185.html
@@ -37,6 +37,7 @@ Linear adjustable-length strings
   <li>60-day deadline: 2020-04-24</li>
   <li>Draft #1 published: 2020-02-24</li>
   <li>Draft #2 published: 2020-03-09</li>
+  <li>Draft #3 published: 2020-04-16</li>
 </ul>
 
 <h1>Abstract</h1>
