--- a/srfi-185.html
+++ b/srfi-185.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="en">
   <head>
-    <title>SRFI 185: Linear adjustable-size strings</title>
+    <title>SRFI 185: Linear adjustable-length strings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/srfi.css" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
