--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Linear adjustable-size strings</title>
+    <title>Linear adjustable-length strings</title>
     <link href="/admin.css" rel="stylesheet">
     <link href="/list.css" rel="stylesheet">
     <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png">
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <h1>SRFI 185: Linear adjustable-size strings</h1>
+    <h1>SRFI 185: Linear adjustable-length strings</h1>
     <p class="authors">by John Cowan</p>
     <p class="based-on"></p>
     <p class="status">status: <em>draft</em> (2020-02-24)</p><span class="see-also">See also <a href="/srfi-13/">SRFI 13: String Libraries</a>, <a href="/srfi-118/">SRFI 118: Simple adjustable-size strings</a>, <a href="/srfi-130/">SRFI 130: Cursor-based string library</a>, <a href="/srfi-140/">SRFI 140: Immutable Strings</a>, and <a href="/srfi-152/">SRFI 152: String Library (reduced)</a>.</span>
