Make small change from John Cowan.

--- a/srfi-185.html
+++ b/srfi-185.html
@@ -93,7 +93,7 @@ In other words, any references to <var>dst</var>
 other than the result of these procedures
 must be treated as "dead" and never referred to again.
 This must be so, since you can't rely on the value passed to a
-linear-update procedure after that procedure has been called. It might
+linear-update procedure after that procedure has been called.
 
 <h1>Specification</h1>
 
