--- a/srfi-185.html
+++ b/srfi-185.html
@@ -178,7 +178,7 @@ takes the arguments in the following order:
 </pre>
 
 We adopt a different argument order here to be consistent with
-<code>string-copy!</code>, and existing <code>string-replace!</code>
+<code>string-copy!</code>, and with existing <code>string-replace!</code>
 implementations.
 </blockquote>
 <h2>Macros</h2>
