--- a/srfi-185.html
+++ b/srfi-185.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/srfi.css" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png">
     <style type="text/css">
   div.title h1 { font-size: small; color: blue }
   div.title { font-size: xx-large; color: blue; font-weight: bold }
