--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <h2>Abstract</h2><p>
 Scheme specifies mutable fixed-length strings.
 <a href="https://srfi.schemers.org/srfi-118/srfi-118.html">SRFI 118</a>
-adds two procedures <code>string-append!</code> and
-<code>string-replace!</code> which allow the length of the string to change.
+adds two procedures, <code>string-append!</code> and
+<code>string-replace!</code>, which allow the length of the string to change.
 This SRFI provides two linear-update versions of these procedures:
 that is, the implementation may change the string length or return a
 new string instead.
