--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <h1>SRFI 185: Linear adjustable-length strings</h1>
     <p class="authors">by John Cowan</p>
     <p class="based-on"></p>
-    <p class="status">status: <em>final</em> (2020-04-26)</p><span class="see-also">See also <a href="/srfi-13/">SRFI 13: String Libraries</a>, <a href="/srfi-118/">SRFI 118: Simple adjustable-size strings</a>, <a href="/srfi-130/">SRFI 130: Cursor-based string library</a>, <a href="/srfi-140/">SRFI 140: Immutable Strings</a>, and <a href="/srfi-152/">SRFI 152: String Library (reduced)</a>.</span>
+    <p class="status">status: <em>final</em> (2020-04-26)</p>
+    <p class="keywords">keywords: [[https://srfi.schemers.org/?keywords=data-structure][Data Structure]]</p><span class="see-also">See also <a href="/srfi-13/">SRFI 13: String Libraries</a>, <a href="/srfi-118/">SRFI 118: Simple adjustable-size strings</a>, <a href="/srfi-130/">SRFI 130: Cursor-based string library</a>, <a href="/srfi-140/">SRFI 140: Immutable Strings</a>, and <a href="/srfi-152/">SRFI 152: String Library (reduced)</a>.</span>
 
     <ul class="info">
       <li><a href="srfi-185.html">The SRFI Document</a></li>
